syntax = "proto3";


message TransactionBody {
    string originator = 2;
    string destination = 3;
    // TODO: figure out how to represent uint128
    uint64 amount = 4;
    uint64 nonce = 5;
    string method_name = 6;
    bytes args = 7;
}

message SignedTransaction {
    TransactionBody body = 1;
    bytes signature = 2;
}

message CallbackInfo {
    bytes id = 1;
    uint64 result_index = 2;
    string receiver = 3;
}

message AccountingInfo {
    string originator = 1;
    string contract_id = 2;
}

message AsyncCallReceipt {
    uint64 amount = 1;
    uint32 mana = 2;
    bytes method_name = 3;
    bytes args = 4;
    CallbackInfo callback_info = 5;
    AccountingInfo accounting_info = 6;
}

message CallbackResultReceipt {
    CallbackInfo info = 1;
    bytes result = 2;
}

message RefundReceipt {
    uint64 amount = 1;
}

message ManaAccountingReceipt {
    AccountingInfo accounting_info = 1;
    uint32 mana_refund = 2;
    uint64 gas_used = 3;
}

message Receipt {
    string originator = 1;
    string receiver = 2;
    bytes nonce = 3;
    oneof body {
        AsyncCallReceipt async_call = 4;
        CallbackResultReceipt callback_result = 5;
        RefundReceipt refund = 6;
        ManaAccountingReceipt mana_accounting = 7;
    }
}

message Transaction {
    oneof body {
        SignedTransaction signed_transaction = 1;
        Receipt receipt = 2;
    }
}

message ChainPayload {
    repeated Transaction transactions = 1;
}
